--- a/opendaylight/networkconfiguration/neutron/implementation/pom.xml
+++ b/opendaylight/networkconfiguration/neutron/implementation/pom.xml
@@ -7,7 +7,6 @@
     <relativePath>../../../commons/opendaylight</relativePath>
   </parent>
   <properties>
-    <nexusproxy>http://nexus.opendaylight.org/content</nexusproxy>
     <enunciate.version>1.26.2</enunciate.version>
   </properties>
   <scm>
@@ -21,12 +20,12 @@
     <!-- OpenDayLight Released artifact -->
     <repository>
       <id>opendaylight-release</id>
-      <url>${nexusproxy}/repositories/opendaylight.release/</url>
+      <url>${nexusproxy}/repositories/${nexus.repository.release}/</url>
     </repository>
     <!-- OpenDayLight Snapshot artifact -->
     <snapshotRepository>
       <id>opendaylight-snapshot</id>
-      <url>${nexusproxy}/repositories/opendaylight.snapshot/</url>
+      <url>${nexusproxy}/repositories/${nexus.repository.snapshot}/</url>
     </snapshotRepository>
     <!-- Site deployment -->
     <site>
