Initial EXI encoder/decoder implementation in Netconf
Change-Id: I861c126a8df1b26f477aa354ed1f8dba59d651cd
Signed-off-by: Martin Bobak <mbobak@cisco.com>

--- a/opendaylight/distribution/opendaylight/pom.xml
+++ b/opendaylight/distribution/opendaylight/pom.xml
@@ -416,6 +416,10 @@
          <artifactId>ganymed</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.opendaylight.controller.thirdparty</groupId>
+            <artifactId>nagasena</artifactId>
+        </dependency>
+        <dependency>
               <groupId>org.zeromq</groupId>
           <artifactId>jeromq</artifactId>
           <version>0.3.1</version>
