--- a/opendaylight/netconf/netconf-util/pom.xml
+++ b/opendaylight/netconf/netconf-util/pom.xml
@@ -53,7 +53,10 @@
         <dependency>
             <groupId>org.opendaylight.controller.thirdparty</groupId>
             <artifactId>nagasena</artifactId>
-            <version>0000.0002.0027.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.opendaylight.controller.thirdparty</groupId>
+            <artifactId>nagasena-rta</artifactId>
         </dependency>
     </dependencies>
 
@@ -103,6 +106,7 @@
                             org.xml.sax,
                             org.xml.sax.helpers,
                             org.opendaylight.controller.config.api,
+                            org.openexi.*,
                         </Import-Package>
                     </instructions>
                 </configuration>
