--- a/opendaylight/netconf/pom.xml
+++ b/opendaylight/netconf/pom.xml
@@ -201,6 +201,16 @@
                 <artifactId>logback-config</artifactId>
                 <version>${config.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.opendaylight.controller.thirdparty</groupId>
+                <artifactId>nagasena</artifactId>
+                <version>0000.0002.0027.0</version>
+            </dependency>
+            <dependency>
+                <groupId>org.opendaylight.controller.thirdparty</groupId>
+                <artifactId>nagasena-rta</artifactId>
+                <version>0000.0002.0027.0</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
