--- a/opendaylight/md-sal/samples/toaster-it/pom.xml
+++ b/opendaylight/md-sal/samples/toaster-it/pom.xml
@@ -43,6 +43,7 @@
             <artifactId>sample-toaster-consumer</artifactId>
             <version>1.1-SNAPSHOT</version>
         </dependency>
+
         <dependency>
             <groupId>org.opendaylight.controller.samples</groupId>
             <artifactId>sample-toaster-provider</artifactId>
@@ -80,6 +81,14 @@
             <artifactId>org.eclipse.osgi</artifactId>
             <version>3.8.1.v20120830-144521</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.opendaylight.controller.thirdparty</groupId>
+            <artifactId>nagasena</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.opendaylight.controller.thirdparty</groupId>
+            <artifactId>nagasena-rta</artifactId>
         </dependency>
     </dependencies>
 </project>
