--- a/opendaylight/distribution/opendaylight/pom.xml
+++ b/opendaylight/distribution/opendaylight/pom.xml
@@ -246,6 +246,14 @@
                     <artifactId>netconf-util</artifactId>
                 </dependency>
                 <dependency>
+                    <groupId>org.opendaylight.controller.thirdparty</groupId>
+                    <artifactId>nagasena</artifactId>
+                </dependency>
+                <dependency>
+                    <groupId>org.opendaylight.controller.thirdparty</groupId>
+                    <artifactId>nagasena-rta</artifactId>
+                </dependency>
+                <dependency>
                     <groupId>org.opendaylight.controller</groupId>
                     <artifactId>netconf-client</artifactId>
                 </dependency>
