Fix sal-remoterpc-connector's Import-Packages.
BND version 2.4.0 produces illegal manifest with the old code - inserts
com.google.common.collect twice. This will propagate as persister failure.
Remove offending line, format distribution.opendaylight pom.xml,
move sal-remoterpc-connector version to common's distribution management.

Change-Id: I2b2a6e81855834648923e1b21e3c443d9ac48562
Signed-off-by: Tomas Olvecky <tolvecky@cisco.com>

--- a/opendaylight/commons/opendaylight/pom.xml
+++ b/opendaylight/commons/opendaylight/pom.xml
@@ -1318,6 +1318,11 @@
           <artifactId>concepts</artifactId>
           <version>${concepts.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.opendaylight.controller</groupId>
+            <artifactId>sal-remoterpc-connector</artifactId>
+            <version>${mdsal.version}</version>
+        </dependency>
 
 
         <!-- config-->
